# lukuvinkkikirjasto

./: -home-jonhyypi-lukuvinkkikirjasto-lukuvinkkikirjasto-src-..txt  .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  log.html  output.xml  pyproject.toml  report.html  routes.py  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
dokumentaatio/: arkkitehtuuri.md  raportti.md  testikattavuus.md
src/: .coverage  .env.test  .gitignore  AppLibrary.py  DATABASE_FILENAME  app.py  build.py  config.py  create_application.py  database_connection.py  db.py  initialise_database.py  routes.py  test-database.db  test.txt  testi.db
src/entities/: recommendation.py  user.py
src/repositories/: recommendation_repository.py  stub_user_repository.py  tip_repository.py  user_repository.py
src/services/: app_service.py  recommendation_service.py  tip_service.py  user_service.py
src/templates/: .register.html.swp  add_recommendation.html  index.html  layout.html  login.html  own_page.html  register.html
src/tests/: add_recommendation.robot  conftest.py  index.robot  index_listing.robot  like.robot  login.robot  ownpage.robot  register.robot  resource.robot  test_app_service.py  test_recommendation.py  test_recommendation_repository.py  test_service.py  test_services.py  test_test.py  test_tip_repository.py  test_user.py  test_user_repository.py  test_user_service.py  tip_repository_test.py
templates/: index.html
