[tool.poetry]
name = "lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["kerkkanen"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
Flask = "^2.0.3"
robot = "^20071211"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
