[tool.poetry]
name = "lukuvinkkikirjasto"
version = "0.1.0"
description = ""
authors = ["kerkkanen"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
Flask = "^2.0.3"
robot = "^20071211"
psycopg2 = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
robotframework = "^4.1.3"
selenium = "^4.1.2"
requests = "^2.27.1"
robotframework-pythonlibcore = "^3.0.0"
robotframework-seleniumlibrary = "^6.0.0"
MarkupSafe = "^2.1.0"
click = "^8.0.4"
urllib3 = "^1.26.8"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.12"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pytest = "^7.0.1"
pylint = "^2.12.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
